--- a/advanced-agv_prototype-app/Base.lproj/LaunchScreen.storyboard
+++ b/advanced-agv_prototype-app/Base.lproj/LaunchScreen.storyboard
@@ -15,15 +15,15 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="advanced-AGV_logo-3" translatesAutoresizingMaskIntoConstraints="NO" id="tLT-ni-aM2">
-                                <rect key="frame" x="87" y="389" width="240" height="128"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="advancedAgv3" translatesAutoresizingMaskIntoConstraints="NO" id="tLT-ni-aM2">
+                                <rect key="frame" x="87" y="325" width="240" height="256"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="128" id="5d9-Kg-DK2"/>
+                                    <constraint firstAttribute="height" constant="256" id="5d9-Kg-DK2"/>
                                     <constraint firstAttribute="width" constant="240" id="RaI-XU-uWz"/>
                                 </constraints>
                             </imageView>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" red="0.58431372550000005" green="0.57254901960000004" blue="0.57254901960000004" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="tLT-ni-aM2" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="eoT-5m-vV4"/>
                             <constraint firstItem="tLT-ni-aM2" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="zC3-Mv-X8g"/>
@@ -37,6 +37,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="advanced-AGV_logo-3" width="396" height="480"/>
+        <image name="advancedAgv3" width="396" height="480"/>
     </resources>
 </document>
